syntax = "proto3";

import "global.proto";

option go_package = "./;proto";
option java_package = "com.github.go2o.rpc";

/** 内容服务 */
service ContentService {
    // 获取页面
    rpc GetPage (IdOrName) returns (SPage) {
    }
    // 保存页面
    rpc SavePage (SPage) returns (Result) {
    }
    // 删除页面
    rpc DeletePage (Int64) returns (Result) {
    }

    // 获取所有栏目
    rpc GetArticleCategories (Empty) returns (ArticleCategoriesResponse) {
    }
    // 获取文章栏目,可传入ID或者别名
    rpc GetArticleCategory (IdOrName) returns (SArticleCategory) {
    }
    // 保存文章栏目
    rpc SaveArticleCategory (SArticleCategory) returns (Result) {
    }
    // 删除文章分类
    rpc DeleteArticleCategory (Int64) returns (Result) {
    }
    // 获取文章
    rpc GetArticle (IdOrName) returns (SArticle) {
    }
    // 删除文章
    rpc DeleteArticle (Int64) returns (Result) {
    }
    // 保存文章
    rpc SaveArticle (SArticle) returns (Result) {
    }
    /** 获取置顶的文章,cat */
    rpc QueryTopArticles (IdOrName) returns (ArticleListResponse) {
    }
    /** 获取分页文章 */
    rpc QueryPagingArticles (PagingArticleRequest) returns (ArticleListResponse) {
    }
}


message PagingArticleRequest {
    string categoryName = 1;
    sint32 begin = 2;
    sint32 size = 3;
}

message ArticleListResponse {
    int64 total = 1;
    repeated SArticle data = 2;
}

//栏目
message SArticleCategory {
    //编号
    int64 id = 1;
    //父类编号,如为一级栏目则为0
    int64 parentId = 2;
    // 浏览权限
    int32 permFlag = 3;
    // 名称(唯一)
    string name = 4;
    // 别名
    string alias = 5;
    // 排序编号
    int32 sortNum = 6;
    // 定位路径（打开栏目页定位到的路径）
    string location = 7;
    // 页面标题
    string title = 8;
    // 关键字
    string keywords = 9;
    // 描述
    string description = 10;
}

/** 文章 */
message SArticle {
    /** 编号  */
    sint64 id = 1;
    /** 栏目编号 */
    sint64 categoryId = 2;
    /** 标题 */
    string title = 3;
    /** 小标题 */
    string smallTitle = 4;
    /** 文章附图 */
    string thumbnail = 5;
    /** 重定向URL */
    sint64 publisherId = 6;
    /** 重定向URL */
    string location = 7;
    /** 优先级,优先级越高，则置顶 */
    sint32 priority = 8;
    /** 浏览钥匙 */
    string accessKey = 9;
    /** 文档内容 */
    string content = 10;
    /** 标签（关键词） */
    string tags = 11;
    /** 显示次数 */
    sint32 viewCount = 12;
    /** 排序序号 */
    sint32 sortNum = 13;
    /** 创建时间 */
    sint64 createTime = 14;
    /** 最后修改时间 */
    sint64 updateTime = 15;
}

message SPage {
    // 编号
    int64 id = 1;
    // 商户编号
    int64 userId =  2;
    // 标题
    string title = 3;
    // 字符标识
    string code = 4;
    // 浏览权限
    int32 flag = 5;
    // 浏览钥匙
    string accessKey = 6;
    // 关键词
    string keyWord = 7;
    // 描述
    string description = 8;
    // 样式表地址
    string cssPath = 9;
    // 内容
    string content = 10;
    // 修改时间
    int64 updateTime = 11;
    // 是否启用
    bool enabled = 12;
}

message ArticleCategoriesResponse {
    repeated SArticleCategory value =  1;
}
